--- a/package.json
+++ b/package.json
@@ -1,10 +1,24 @@
 {
   "name": "geomeditor",
-  "version": "1.0.0",
+  "version": "0.1.0",
+  "author": {
+    "name": "Aleksandr Gurianov",
+    "url": "http://golova.pro"
+  },
+  "homepage": "https://github.com/graverok/geomeditor#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/graverok/geomeditor"
+  },
+  "bugs": {
+    "url": "https://github.com/graverok/geomeditor/issues"
+  },
+  "license": "MIT",
   "main": "dist/geomeditor.cjs.js",
   "module": "dist/geomeditor.esm.js",
   "browser": "dist/geomeditor.umd.js",
   "types": "dist/types/main.d.ts",
+  "keywords": ["mapbox", "editor", "geometry"],
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
