--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "declaration": true,
     "declarationDir": "dist/types",
     "emitDeclarationOnly": true,
+    "declarationMap": true,
     "lib": [
       "es2017",
       "dom",
