--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,9 @@
 /.pnp
 .pnp.js
 
-# testing
-/coverage
+# develop
+/dev.ts
+/index.html
 
 # production
 /build
@@ -14,10 +15,6 @@
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
