--- a/package.json
+++ b/package.json
@@ -18,12 +18,19 @@
   "module": "dist/geomeditor.esm.js",
   "browser": "dist/geomeditor.umd.js",
   "types": "dist/types/main.d.ts",
-  "keywords": ["mapbox", "editor", "geometry"],
+  "keywords": [
+    "mapbox",
+    "editor",
+    "geometry"
+  ],
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@types/geojson": "^7946.0.14",
+    "@types/jest": "^29.5.12",
     "@types/mapbox-gl": "^2.7.19",
+    "jest": "^29.7.0",
     "mapbox-gl": "^3.1.2",
     "prettier": "^3.1.1",
     "rollup": "^2.79.1",
@@ -33,17 +40,16 @@
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-typescript": "^1.0.0",
     "rollup-plugin-uglify": "^6.0.4",
+    "ts-jest": "^29.1.2",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.12",
     "vite-tsconfig-paths": "^4.3.1"
   },
-  "peerDependencies": {
-    "mapbox-gl": "^3.x"
-  },
   "scripts": {
     "build": "rollup -c",
-    "dev": "vite"
+    "dev": "vite",
+    "test": "jest"
   },
   "files": [
     "dist"
