Refactor core and tools:  - Refactor core API and event listeners  - Add pen tools isolated modes  - Add custom cursors  - Fix point merge

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geoditor",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "author": {
     "name": "Aleksandr Gurianov",
     "url": "http://golova.pro"
@@ -23,7 +23,8 @@
     "mapbox",
     "editor",
     "geometry",
-    "geojson"
+    "geojson",
+    "map draw"
   ],
   "devDependencies": {
     "@babel/core": "^7.2.2",
