--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geoditor",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "author": {
     "name": "Aleksandr Gurianov",
     "url": "http://golova.pro"
@@ -47,7 +47,7 @@
     "ts-jest": "^29.1.2",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "vite": "^5.0.12",
+    "vite": "5.2.6",
     "vite-tsconfig-paths": "^4.3.1"
   },
   "scripts": {
