--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,9 @@
     ],
     "strict": true,
     "esModuleInterop": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "src"
