--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "homepage": "https://github.com/graverok/geoditor#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/graverok/geoditor"
+    "url": "git+https://github.com/graverok/geoditor.git"
   },
   "bugs": {
     "url": "https://github.com/graverok/geoditor/issues"
