--- a/package.json
+++ b/package.json
@@ -57,5 +57,9 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "styled": "^1.0.0",
+    "styled-components": "^6.1.13"
+  }
 }
