--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "jest": "^29.7.0",
     "mapbox-gl": "^3.1.2",
     "prettier": "^3.1.1",
-    "rollup": "^2.79.1",
+    "rollup": "2.79.2",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-dts": "^6.1.0",
@@ -47,11 +47,11 @@
     "ts-jest": "^29.1.2",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "vite": "5.2.6",
+    "vite": "5.4.6",
     "vite-tsconfig-paths": "^4.3.1"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "yarn test && rollup -c",
     "dev": "vite",
     "test": "jest"
   },
