--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "geoditor",
-  "version": "0.2.6",
+  "version": "0.3.0",
   "author": {
     "name": "Aleksandr Gurianov",
     "url": "http://golova.pro"
   },
-  "homepage": "https://github.com/graverok/geoditor#readme",
+  "homepage": "https://graverok.github.io/geoditor",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/graverok/geoditor.git"
@@ -37,7 +37,7 @@
     "jest": "^29.7.0",
     "mapbox-gl": "^3.1.2",
     "prettier": "^3.1.1",
-    "rollup": "^2.79.1",
+    "rollup": "2.79.2",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-dts": "^6.1.0",
@@ -47,19 +47,15 @@
     "ts-jest": "^29.1.2",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "vite": "5.2.6",
+    "vite": "5.4.6",
     "vite-tsconfig-paths": "^4.3.1"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "yarn test && rollup -c",
     "dev": "vite",
     "test": "jest"
   },
   "files": [
     "dist"
-  ],
-  "dependencies": {
-    "styled": "^1.0.0",
-    "styled-components": "^6.1.13"
-  }
+  ]
 }
